add edit page to repo

--- a/component.html
+++ b/component.html
@@ -373,7 +373,7 @@
                 <h3>位置信息</h3>
                 <div id="current-loc">
                     <a class="data" href="">文章管理</a>
-                    >
+                    <span>></span>
                     <a class="data" href="">草稿箱</a>
                 </div>
                 <div class="code-wrapper">
