--- a/mamagment.article.html
+++ b/mamagment.article.html
@@ -24,8 +24,15 @@
                 <div class="logo item">
                     <img src="image/logo.png" alt="logo 图片">
                 </div>
+                <div class="logo item">
+                    <img src="image/logo.png" alt="logo 图片">
+                </div>
                 <div class="menu-item">
-                    <span class="icon"><li class="fa fa-pencil-square-o"></li></span>
+                    <span class="icon"><li class="fa fa-edit"></li></span>
+                    <span class="data">写文章</span>
+                </div>
+                <div class="menu-item">
+                    <span class="icon"><li class="fa fa-folder-o"></li></span>
                     <span class="data">文章管理</span>
                 </div>
                 <div class="menu-item active">
